Changing class name and fixing scrollbar

--- a/src/components/answer/styles.css
+++ b/src/components/answer/styles.css
@@ -1,4 +1,4 @@
-.answer-container {
+.answer-row-container {
   width: 100%;
   height: 5rem;
 }
