--- a/src/components/answersList/styles.css
+++ b/src/components/answersList/styles.css
@@ -8,6 +8,7 @@
   overflow-y: scroll;
   overflow-x: hidden;
   letter-spacing: 1px;
+  overflow-y: overlay;
 }
 
 .answers-list-container div {
